Fix highlights overflow

--- a/themes/mytheme/assets/css/main.sass
+++ b/themes/mytheme/assets/css/main.sass
@@ -96,6 +96,7 @@ code
     .chroma
         border-radius: 2px
         padding: 4px 10px
+        overflow: auto
         code
             padding: 0
 
